get name from userId
